# release-1.0

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  DoxyfileRelatedPagesOnly.in  INSTALL  Makefile.am  README.md  bitbucket-pipelines.yml  configure.ac  install-macos-deps.sh
cmake/: CodeCoverage.cmake  FindCairo.cmake
doc/: coding_guidelines.dox  installation.dox  main_page.dox  tutorial.dox
examples/: 3bouncingballs.cc  CMakeLists.txt  Makefile-bin.am  Makefile-examples  Makefile.am  boost-converter-monolithic.h  boost-converter.cc  boost-converter.h  bouncingball.cc  circle.cc  cmos_inverter_analoginput.cc  discretisation.cc  ecoli.cc  examples.h  exponential.cc  fb_refinement.cc  home.cc  home.h  rectifier.cc  robotarm.cc  sinusoid-sin.cc  springs.cc  springs.h  thermostat.cc  thermostat.h  traffic-arbitrator4.cc  tutorial.cc  vanderpol.cc  vanderpool.cc  watertank-aasap.cc  watertank-compositional-hysteresis.cc  watertank-compositional-hysteresis.h  watertank-compositional-proportional.h  watertank-dominance.cc  watertank-hysteresis.cc  watertank-hysteresis.h  watertank-monolithic-dominance.cc  watertank-monolithic-hysteresis.cc  watertank-monolithic-hysteresis.h  watertank-monolithic-proportional.cc  (+8 more)
examples/experimental/: CMakeLists.txt  circle-stable.cc  circle-unstable.cc  circle.cc  circle.h  cmos_inverter_analoginput.cc  composition.cc  cutting-depth.h  double-exponential.cc  exponential.cc  guard-check.cc  integration.cc  laser-trajectory.h  laser.cc  range-check.cc  rectifier.cc  robotarm.cc  set_splitting.cc  sin.cc  skin-temperature.h  timeout.h  timer.h  traffic-arbitrator4.cc  vanderpol.cc
examples/experimental/laser/: CMakeLists.txt  cutting-depth.h  laser-trajectory.h  laser.cc  skin-exposure.h  skin-temperature.h
examples/experimental/laser-border/: CMakeLists.txt  laser.cc  skin-exposure.h
examples/experimental/laser-centre/: CMakeLists.txt  laser.cc
examples/experimental/laser-common/: laser-trajectory.h  skin-temperature.h
examples/experimental/laser/centre/: laser.cc  skin-exposure.h
examples/experimental/laser/common/: cutting-depth.h  skin-temperature.h
examples/experimental/laser/generic/: CMakeLists.txt  laser-period.cc  laser-trajectory.h  laser-zi-check.cc  laser.cc  skin-exposure.h
examples/experimental/laser/right/: CMakeLists.txt  laser.cc  skin-exposure.h
examples/experimental/painting/: CMakeLists.txt  deposition.h  painting-spatial-parametric.cc  painting-spatial.cc  painting.cc  spray.h  trajectory.h
helloworld/: Makefile  helloworld.cc
include/: Makefile.am  approximate_set.h  ariadne.h  ariadne.h.in  ariadne_install.h.in  array.h  assignment.h  bdd_set.h  box.h  config.h.in  denotable_set.h  dense_differential.h  discrete_location.h  discretiser.h  disprove_data.h  epsilon_lower_bounds.h  evolver_base.h  evolver_interface.h  exceptions.h  expansion.h  expression.h  formula.h  function.h  function_set.h  geometry.h  graphics.h  grid.h  grid_set.h  hybrid_automaton.h  hybrid_automaton_interface.h  hybrid_evolver-image.h  hybrid_evolver.h  hybrid_io_automaton.h  hybrid_set.h  hybrid_set_interface.h  integrator.h  integrator_interface.h  interruptible.h  logging.h  macros.h  (+29 more)
src/: CMakeLists.txt  Makefile.am  ariadne.pc.in  bdd_set.cc  box.cc  box.cpp  denotable_set.cc  denotable_set.cpp  discretiser.cc  expression.cc  expression.cpp  function.cc  function.cpp  function_set.cc  function_set.cpp  graphics.cc  graphics.cpp  grid.cc  grid_set.cc  hybrid_automaton.cc  hybrid_evolver-image.cc  hybrid_io_automaton.cc  hybrid_io_automaton.cpp  hybrid_set.cc  integrator.cc  integrator.cpp  linear_programming.cpp  matrix.cc  numeric.cc  orbit.cc  orbit.cpp  parametric.cc  parametric.cpp  point.cpp  polytope.cc  reachability_analyser.cc  reachability_restriction.cc  set_checker.cc  taylor_calculus.cc  taylor_function.cc  (+11 more)
test/: CMakeLists.txt  Makefile.am  test.h  test_bdd_set.cc  test_differential.cc  test_discretised_evolution.cc  test_expansion.cpp  test_function.cc  test_function_set.cc  test_function_set.cpp  test_graphics.cc  test_grid_set.cc  test_hybrid_evolution.cc  test_hybrid_io_automaton.cc  test_hybrid_set.cc  test_hybrid_simulator.cc  test_integrator.cc  test_interval.cpp  test_multi_index.cc  test_polynomial.cc  test_reachability_analysis.cc  test_reachability_analysis.cpp  test_reachability_restriction.cc  test_reachability_restriction.cpp  test_taylor_model.cc  test_taylor_set.cc  test_taylor_set.cpp  test_textplot.cc  test_textplot.cpp  test_vector.cc
tutorial/: CMakeLists.txt  Makefile.am  README  analysis.h  automata.h  compositional-forced.cc  compositional-forced.h  compositional-linear-forced.cc  compositional-linear-forced.h  compositional-linear-nonurgent-parametric.cc  compositional-linear-nonurgent-parametric.h  compositional-linear-unforced.cc  compositional-linear-unforced.h  compositional-nonlinear-unforced.cc  compositional-nonlinear-unforced.h  compositional-unforced.cc  compositional-unforced.h  compositional.cc  compositional.h  monolithic-forced.cc  monolithic-forced.h  monolithic-linear-forced.cc  monolithic-linear-forced.h  monolithic-linear-nonurgent-parametric.cc  monolithic-linear-unforced.cc  monolithic-linear-unforced.h  monolithic-nonlinear-nonurgent-parametric.cc  monolithic-nonlinear-unforced.cc  monolithic-nonlinear-unforced.h  monolithic-unforced.cc  monolithic-unforced.h  monolithic.cc  monolithic.h  system.h  tutorial.cc  tutorial.h  watertank.h
tutorial/cmake/: FindBuddy.cmake
