ariadnedir = $(pkgincludedir)

ariadne_HEADERS = ../config.h \
	affine.h \
	ariadne.h \
	array.h \
	assignment.h \
	bdd_set.h \
	binary_word.h \
	box.h \
	calculus_base.h \
	calculus_interface.h \
	colour.h \
	container.h \
	curve.h \
	denotable_set.h \
	dense_differential.h \
	differential.h \
	discrete_event.h \
	discrete_location.h \
	evolver_base.h \
	evolver_interface.h \
	exceptions.h \
	expansion.h \
	expression.h \
	formula.h \
	function.h \
	function_interface.h \
	function_set.h \
	geometry.h \
	graphics.h \
	graphics_interface.h \
	grid.h \
	grid_set.h \
	hybrid_automaton.h \
	hybrid_automaton_interface.h \
	hybrid_evolver.h \
	hybrid_evolver-image.h \
	hybrid_io_automaton.h \
	hybrid_set.h \
	hybrid_set_interface.h \
	hybrid_time.h \
	integrator.h \
	integrator_interface.h \
	interruptible.h \
	linear_programming.h \
	list_set.h \
	logging.h \
	macros.h \
	map.h \
	matrix.h \
	models.h \
	multi_index.h \
	numeric.h \
	operators.h \
	orbit.h \
	parametric.h \
	paving.h \
	pointer.h \
	point.h \
	polyhedron.h \
	polynomial.h \
	polytope.h \
	predicate.h \
	reachability_analyser.h \
	reachability_analyser_interface.h \
	reachability_restriction.h \
	real.h \
	rounding.h \
	serialization.h \
	series.h \
	set_checker.h \
	set_interface.h \
	simulation_toolbox.h \
	simulation_toolbox_interface.h \
	solver.h \
	solver_interface.h \
	space.h \
	stlio.h \
	taylor_calculus.h \
	taylor_function.h \
	taylor_model.h \
	taylor_series.h \
	taylor_set.h \
	textplot.h \
	tribool.h \
	tuple.h \
	user_function.h \
	valuation.h \
	variables.h \
	vector_field.h \
	vector.h \
	verification_input.h \
	verifier.h \
	workers.h \
	zonotope.h

