add_library(ariadne-src OBJECT
        numeric.cc
        vector.cc
        matrix.cc
        linear_programming.cc
        differential.cc
        taylor_model.cc
        expression.cc
        affine.cc
        polynomial.cc
        function.cc
        taylor_function.cc
        simulation_toolbox.cc
        taylor_calculus.cc
        solver.cc
        integrator.cc
        point.cc
        box.cc
        zonotope.cc
        polytope.cc
        polyhedron.cc
        curve.cc
        function_set.cc
        taylor_set.cc
        grid.cc
        denotable_set.cc
        hybrid_set.cc
        bdd_set.cc
        geometry.cc
        hybrid_automaton.cc
        hybrid_io_automaton.cc
        orbit.cc
        hybrid_evolver-image.cc
        set_checker.cc
        reachability_restriction.cc
        reachability_analyser.cc
        logging.cc
        graphics.cc
        textplot.cc
        parametric.cc
        verifier.cc
        verification_input.cc
        )